// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HvControls> sample snapshot testing Controls 1`] = `
<div>
  <div
    style="display: grid; gap: 8px;"
  >
    <div
      class="HvControls-root"
    >
      <div
        class="HvControls-section HvControls-leftSection"
      >
        <div
          class="HvLeftControl-root"
          theme="[object Object]"
        >
          <div
            class="HvInput-root HvFormElement-root"
          >
            <div
              class="HvBaseInput-root"
            >
              <div
                class="HvBaseInput-inputRoot HvInput-inputRoot MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedEnd css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-controls="cardsGrid itemList"
                  class="HvBaseInput-input HvInput-input MuiInput-input MuiInputBase-input MuiInputBase-inputTypeSearch MuiInputBase-inputAdornedEnd css-z3gqro-MuiInputBase-input-MuiInput-input"
                  placeholder="Search"
                  rows="10"
                  type="search"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="HvInput-adornmentsBox"
                >
                  <div
                    aria-label="Search"
                    class="HvInput-adornmentButton HvAdornment-root HvAdornment-adornment HvAdornment-adornmentIcon"
                    role="presentation"
                  >
                    <div
                      class="HvAdornment-icon"
                    >
                      <div
                        class="HvIconBase-root HvIconBase-s"
                        name="Search"
                      >
                        <svg
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M15.06836 14.51807l-4.569-4.56885a5.96162 5.96162 0 10-.71692.697l4.57892 4.57886zM5.90155 11A4.95119 4.95119 0 011 6c-.00031-.033-.00031-.06567 0-.09863A4.95089 4.95089 0 016 1q.04926-.00073.09851 0A4.95079 4.95079 0 0111 6q.00056.04906 0 .09839A4.95109 4.95109 0 016 11q-.04917.00036-.09845 0z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="HvBaseInput-inputBorderContainer HvInput-inputBorderContainer"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="HvControls-section HvControls-rightSection"
      >
        <div
          class="HvRightControl-root"
          theme="[object Object]"
        >
          <div
            aria-controls="cardsGrid itemList"
            class="HvRightControl-sortDropdown HvDropdown-root HvFormElement-root"
          >
            <div
              class="HvBaseDropdown-root HvDropdown-dropdown"
            >
              <div
                aria-expanded="false"
                class="HvBaseDropdown-anchor"
                role="combobox"
                tabindex="-1"
              >
                <div
                  class="HvBaseDropdown-header HvDropdown-dropdownHeader"
                  role="textbox"
                  tabindex="0"
                >
                  <div
                    class="HvBaseDropdown-selection"
                  >
                    <div
                      class="HvDropdown-placeholder HvTypography-root HvTypography-placeholderText HvTypography-noWrap"
                    >
                      Select...
                    </div>
                  </div>
                  <div
                    class="HvBaseDropdown-arrow HvDropdown-arrow HvIconBase-root HvIconBase-xs"
                    name="DropDownXS"
                  >
                    <svg
                      focusable="false"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="HvMultiButton-root"
        >
          <button
            aria-label="Select card view"
            aria-pressed="true"
            class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvMultiButton-selected HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
            id="card"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Cards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M2 14h5V9H2zm1-4h3v3H3zM2 7h5V2H2zm1-4h3v3H3zm6 11h5V9H9zm1-4h3v3h-3zM9 2v5h5V2zm4 4h-3V3h3z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
          <button
            aria-label="Select list view"
            aria-pressed="false"
            class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
            id="list"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="List"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 7h2v2H0zm0-3h2V2H0zm0 10h2v-2H0zm4-5.6h12v-1H4zm0-5h12v-1H4zm0 10h12v-1H4z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-container-1"
      classes="[object Object]"
      id="cardsGrid"
    >
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 1
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 2
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 3
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 4
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 5
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 6
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 7
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 8
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 9
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 10
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvControls> sample snapshot testing Controls Controlled 1`] = `
<div>
  <div
    style="display: grid; gap: 8px;"
  >
    <div
      class="HvControls-root"
    >
      <div
        class="HvControls-section HvControls-leftSection"
      >
        <div
          class="HvLeftControl-root"
          theme="[object Object]"
        >
          <div
            class="HvInput-root HvFormElement-root"
          >
            <div
              class="HvBaseInput-root"
            >
              <div
                class="HvBaseInput-inputRoot HvInput-inputRoot MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedEnd css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-controls="controlledCardsGrid controlledItemList"
                  class="HvBaseInput-input HvInput-input MuiInput-input MuiInputBase-input MuiInputBase-inputTypeSearch MuiInputBase-inputAdornedEnd css-z3gqro-MuiInputBase-input-MuiInput-input"
                  placeholder="Search"
                  rows="10"
                  type="search"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="HvInput-adornmentsBox"
                >
                  <div
                    aria-label="Search"
                    class="HvInput-adornmentButton HvAdornment-root HvAdornment-adornment HvAdornment-adornmentIcon"
                    role="presentation"
                  >
                    <div
                      class="HvAdornment-icon"
                    >
                      <div
                        class="HvIconBase-root HvIconBase-s"
                        name="Search"
                      >
                        <svg
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M15.06836 14.51807l-4.569-4.56885a5.96162 5.96162 0 10-.71692.697l4.57892 4.57886zM5.90155 11A4.95119 4.95119 0 011 6c-.00031-.033-.00031-.06567 0-.09863A4.95089 4.95089 0 016 1q.04926-.00073.09851 0A4.95079 4.95079 0 0111 6q.00056.04906 0 .09839A4.95109 4.95109 0 016 11q-.04917.00036-.09845 0z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="HvBaseInput-inputBorderContainer HvInput-inputBorderContainer"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="HvControls-section HvControls-rightSection"
      >
        <div
          class="HvRightControl-root"
          theme="[object Object]"
        >
          <div
            aria-controls="controlledCardsGrid controlledItemList"
            class="HvRightControl-sortDropdown HvDropdown-root HvFormElement-root"
          >
            <div
              class="HvBaseDropdown-root HvDropdown-dropdown"
            >
              <div
                aria-expanded="false"
                class="HvBaseDropdown-anchor"
                role="combobox"
                tabindex="-1"
              >
                <div
                  class="HvBaseDropdown-header HvDropdown-dropdownHeader"
                  role="textbox"
                  tabindex="0"
                >
                  <div
                    class="HvBaseDropdown-selection"
                  >
                    <div
                      class="HvDropdown-placeholder HvTypography-root HvTypography-normalText HvTypography-noWrap"
                    >
                      Name Ascending
                    </div>
                  </div>
                  <div
                    class="HvBaseDropdown-arrow HvDropdown-arrow HvIconBase-root HvIconBase-xs"
                    name="DropDownXS"
                  >
                    <svg
                      focusable="false"
                      height="12"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M5.99994 8.65L1.4 4.05l.7-.7L6 7.25l3.9-3.9.7.7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="HvMultiButton-root"
        >
          <button
            aria-label="Select card view"
            aria-pressed="true"
            class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvMultiButton-selected HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
            id="card"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Cards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M2 14h5V9H2zm1-4h3v3H3zM2 7h5V2H2zm1-4h3v3H3zm6 11h5V9H9zm1-4h3v3h-3zM9 2v5h5V2zm4 4h-3V3h3z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
          <button
            aria-label="Select list view"
            aria-pressed="false"
            class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
            id="list"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="List"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M0 7h2v2H0zm0-3h2V2H0zm0 10h2v-2H0zm4-5.6h12v-1H4zm0-5h12v-1H4zm0 10h12v-1H4z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-container-1"
      classes="[object Object]"
    >
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 1
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 2
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 3
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 4
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 5
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 6
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 7
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 8
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 9
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 10
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvControls> sample snapshot testing Custom Controls 1`] = `
<div>
  <div
    style="display: grid; gap: 8px;"
  >
    <div
      class="HvControls-root"
    >
      <div
        class="HvControls-section HvControls-leftSection"
      >
        <div
          class="HvLeftControl-root"
          id="MultibuttonFilter"
          theme="[object Object]"
        >
          <div
            class="HvMultiButton-root"
            style="width: 350px;"
          >
            <button
              aria-controls="CustomControlsCardsId"
              aria-pressed="true"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvMultiButton-selected HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="all"
              tabindex="0"
              type="button"
            >
              All
            </button>
            <button
              aria-controls="CustomControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="critical"
              tabindex="0"
              type="button"
            >
              Critical
            </button>
            <button
              aria-controls="CustomControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="major"
              tabindex="0"
              type="button"
            >
              Major
            </button>
            <button
              aria-controls="CustomControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="average"
              tabindex="0"
              type="button"
            >
              Average
            </button>
            <button
              aria-controls="CustomControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="minor"
              tabindex="0"
              type="button"
            >
              Minor
            </button>
          </div>
        </div>
      </div>
      <div
        class="HvControls-section HvControls-rightSection"
      >
        <div
          class="HvRightControl-root"
          theme="[object Object]"
        >
          <label
            class="HvLabel-root HvTypography-root HvTypography-highlightText"
            for="tempFilter"
            id="temp-label"
          >
            Temperature:
          </label>
          <div
            class="HvFormElement-root"
            id="tempFilter-controls"
            style="width: 240px; z-index: 40;"
          >
            <div
              class="HvSlider-sliderBase HvSlider-sliderContainer"
            >
              <div
                class="rc-slider HvSlider-sliderRoot rc-slider-horizontal rc-slider-with-marks"
              >
                <div
                  class="rc-slider-rail"
                  style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
                />
                <div
                  class="rc-slider-track"
                  style="left: 0%; width: 0%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
                />
                <div
                  class="rc-slider-step"
                >
                  <span
                    class="rc-slider-dot rc-slider-dot-active"
                    style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                </div>
                <div
                  class="HvSlider-handleContainer"
                >
                  <div
                    aria-controls="CustomControlsCardsId"
                    aria-disabled="false"
                    aria-label="temp-slider"
                    aria-valuemax="70"
                    aria-valuemin="25"
                    aria-valuenow="25"
                    class="rc-slider-handle HvSlider-handle"
                    id="tempFilter-controls-knob-0"
                    role="slider"
                    style="left: 0%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
                    tabindex="0"
                  />
                </div>
                <div
                  class="rc-slider-mark"
                >
                  <span
                    class="rc-slider-mark-text rc-slider-mark-text-active"
                    style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    25
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    34
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    43
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    52
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    61
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    70
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-container-1"
      classes="[object Object]"
      id="CustomControlsCardsId"
    >
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 1
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          35
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 2
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          36
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 3
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          37
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 4
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          38
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 5
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          39
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 6
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          40
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 7
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          41
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 8
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          42
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 9
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          43
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 10
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          44
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 11
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          45
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 12
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          46
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 13
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          47
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 14
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          48
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 15
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          49
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvControls> sample snapshot testing Mixed Controls 1`] = `
<div>
  <div
    style="display: grid; gap: 8px;"
  >
    <div
      class="HvControls-root"
    >
      <div
        class="HvControls-section HvControls-leftSection"
      >
        <div
          class="HvLeftControl-root"
          id="MultibuttonFilter"
          theme="[object Object]"
        >
          <div
            class="HvInput-root HvFormElement-root"
            id="MultibuttonFilter-search-input"
          >
            <div
              class="HvBaseInput-root"
            >
              <div
                class="HvBaseInput-inputRoot HvInput-inputRoot MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedEnd css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  class="HvBaseInput-input HvInput-input MuiInput-input MuiInputBase-input MuiInputBase-inputTypeSearch MuiInputBase-inputAdornedEnd css-z3gqro-MuiInputBase-input-MuiInput-input"
                  id="MultibuttonFilter-search-input-input"
                  placeholder="Search"
                  rows="10"
                  type="search"
                  value=""
                />
                <div
                  aria-hidden="true"
                  class="HvInput-adornmentsBox"
                >
                  <div
                    aria-label="Search"
                    class="HvInput-adornmentButton HvAdornment-root HvAdornment-adornment HvAdornment-adornmentIcon"
                    role="presentation"
                  >
                    <div
                      class="HvAdornment-icon"
                    >
                      <div
                        class="HvIconBase-root HvIconBase-s"
                        name="Search"
                      >
                        <svg
                          focusable="false"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            class="color0"
                            d="M15.06836 14.51807l-4.569-4.56885a5.96162 5.96162 0 10-.71692.697l4.57892 4.57886zM5.90155 11A4.95119 4.95119 0 011 6c-.00031-.033-.00031-.06567 0-.09863A4.95089 4.95089 0 016 1q.04926-.00073.09851 0A4.95079 4.95079 0 0111 6q.00056.04906 0 .09839A4.95109 4.95109 0 016 11q-.04917.00036-.09845 0z"
                            fill="#414141"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="HvBaseInput-inputBorderContainer HvInput-inputBorderContainer"
                role="presentation"
              />
            </div>
          </div>
          <div
            class="HvMultiButton-root"
            style="width: 350px;"
          >
            <button
              aria-controls="mixedControlsCardsId"
              aria-pressed="true"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvMultiButton-selected HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="all"
              tabindex="0"
              type="button"
            >
              All
            </button>
            <button
              aria-controls="mixedControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="critical"
              tabindex="0"
              type="button"
            >
              Critical
            </button>
            <button
              aria-controls="mixedControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="major"
              tabindex="0"
              type="button"
            >
              Major
            </button>
            <button
              aria-controls="mixedControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="average"
              tabindex="0"
              type="button"
            >
              Average
            </button>
            <button
              aria-controls="mixedControlsCardsId"
              aria-pressed="false"
              class="HvButton-root MuiButton-root MuiButton-text HvButton-ghost MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvMultiButton-button HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="minor"
              tabindex="0"
              type="button"
            >
              Minor
            </button>
          </div>
        </div>
      </div>
      <div
        class="HvControls-section HvControls-rightSection"
      >
        <div
          class="HvRightControl-root"
          theme="[object Object]"
        >
          <label
            class="HvLabel-root HvTypography-root HvTypography-highlightText"
            for="tempFilter"
            id="temp-label"
          >
            Temperature:
          </label>
          <div
            class="HvFormElement-root"
            id="tempFilter-mixed"
            style="width: 240px; z-index: 40;"
          >
            <div
              class="HvSlider-sliderBase HvSlider-sliderContainer"
            >
              <div
                class="rc-slider HvSlider-sliderRoot rc-slider-horizontal rc-slider-with-marks"
              >
                <div
                  class="rc-slider-rail"
                  style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
                />
                <div
                  class="rc-slider-track"
                  style="left: 0%; width: 0%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
                />
                <div
                  class="rc-slider-step"
                >
                  <span
                    class="rc-slider-dot rc-slider-dot-active"
                    style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                  <span
                    class="rc-slider-dot"
                    style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
                  />
                </div>
                <div
                  class="HvSlider-handleContainer"
                >
                  <div
                    aria-controls="mixedControlsCardsId"
                    aria-disabled="false"
                    aria-label="temp-slider"
                    aria-valuemax="70"
                    aria-valuemin="25"
                    aria-valuenow="25"
                    class="rc-slider-handle HvSlider-handle"
                    id="tempFilter-mixed-knob-0"
                    role="slider"
                    style="left: 0%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
                    tabindex="0"
                  />
                </div>
                <div
                  class="rc-slider-mark"
                >
                  <span
                    class="rc-slider-mark-text rc-slider-mark-text-active"
                    style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    25
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    34
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    43
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    52
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    61
                  </span>
                  <span
                    class="rc-slider-mark-text"
                    style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
                  >
                    70
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-container-1"
      classes="[object Object]"
      id="mixedControlsCardsId"
    >
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 1
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          35
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 2
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          36
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 3
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          37
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 4
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          38
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 5
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          39
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 6
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          40
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 7
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          41
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 8
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          42
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 9
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          43
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 10
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          44
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 11
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          45
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 12
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 3
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Minor
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          46
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 13
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 0
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Critical
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          47
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 14
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 1
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Major
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          48
        </div>
      </div>
      <div
        class="HvIsCardGridElement HvCard-root MuiBox-root css-8ud4em"
        style="width: 100%;"
      >
        <div
          class="HvCard-semanticContainer"
        >
          <div
            class="HvCard-semanticBar HvCard-sema0"
          />
          <div
            class="HvCard-icon"
          />
        </div>
        <div
          class="MuiCardHeader-root HvCardHeader-root css-185gdzj-MuiCardHeader-root"
        >
          <div
            class="HvCardHeader-content MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <span
              class="MuiTypography-root MuiTypography-h5 HvCardHeader-title MuiCardHeader-title css-19er8pf-MuiTypography-root"
            >
              Event 15
            </span>
          </div>
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Event: 
          Anomaly detection 2
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Severity: 
          Average
        </div>
        <div
          class="MuiCardContent-root HvCardContent-content css-46bh2p-MuiCardContent-root"
        >
          Temperature: 
          49
        </div>
      </div>
    </div>
  </div>
</div>
`;
